--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -9,21 +9,25 @@
 #option_menu {
     display: inline-block;
     background-color: lightsalmon;
-    padding-bottom: 600px;
-    padding-right: 80px;
+    height: 700px;
+    margin: 0;
+    padding-right: 1%;
+    border: 0;
 }
 
 #bg_div {
     background-color: lightgray;
+    height: 800px;
 }
 
 #bg_chatbox {
-    display: inline-block;
+    display: inline;
+    position: absolute;
+    margin-left: 1%;
 
 }
 
 #chatbox {
-    display: inline-block; 
     width: 100%;
     height: 600px;
     resize: none;
@@ -48,5 +52,9 @@ a {
 }
 
 h1 {
+    text-align: center;
+}
+
+p {
     text-align: center;
 }
